plpy.output
Conflicts:
----------
Conflict in state 38 between rule 58 and token ADDOP resolved as shift.
Conflict in state 38 between rule 58 and token ASSIGNOP resolved as shift.
Conflict in state 38 between rule 58 and token POSTINC resolved as shift.
Conflict in state 38 between rule 58 and token POWOP resolved as shift.
Conflict in state 38 between rule 58 and token MATCHOP resolved as shift.
Conflict in state 38 between rule 58 and token POSTDEC resolved as shift.
Conflict in state 38 between rule 58 and token DOTDOT resolved as shift.
Conflict in state 38 between rule 58 and token MULOP resolved as shift.
Conflict in state 38 between rule 58 and token ANDAND resolved as shift.
Conflict in state 38 between rule 58 and token OROR resolved as shift.
Conflict in state 38 between rule 58 and token RELOP resolved as shift.
Conflict in state 38 between rule 58 and token EQOP resolved as shift.
Conflict in state 56 between rule 55 and token ',' resolved as shift.
Conflict in state 57 between rule 74 and token ADDOP resolved as reduce.
Conflict in state 57 between rule 74 and token ASSIGNOP resolved as reduce.
Conflict in state 57 between rule 74 and token POSTINC resolved as shift.
Conflict in state 57 between rule 74 and token POWOP resolved as shift.
Conflict in state 57 between rule 74 and token MATCHOP resolved as reduce.
Conflict in state 57 between rule 74 and token POSTDEC resolved as shift.
Conflict in state 57 between rule 74 and token DOTDOT resolved as reduce.
Conflict in state 57 between rule 74 and token MULOP resolved as reduce.
Conflict in state 57 between rule 74 and token ANDAND resolved as reduce.
Conflict in state 57 between rule 74 and token OROR resolved as reduce.
Conflict in state 57 between rule 74 and token RELOP resolved as reduce.
Conflict in state 57 between rule 74 and token EQOP resolved as reduce.
Conflict in state 75 between rule 119 and token ',' resolved as shift.
Conflict in state 78 between rule 76 and token ADDOP resolved as reduce.
Conflict in state 78 between rule 76 and token ASSIGNOP resolved as reduce.
Conflict in state 78 between rule 76 and token POSTINC resolved as shift.
Conflict in state 78 between rule 76 and token POWOP resolved as shift.
Conflict in state 78 between rule 76 and token MATCHOP resolved as reduce.
Conflict in state 78 between rule 76 and token POSTDEC resolved as shift.
Conflict in state 78 between rule 76 and token DOTDOT resolved as reduce.
Conflict in state 78 between rule 76 and token MULOP resolved as reduce.
Conflict in state 78 between rule 76 and token ANDAND resolved as reduce.
Conflict in state 78 between rule 76 and token OROR resolved as reduce.
Conflict in state 78 between rule 76 and token RELOP resolved as reduce.
Conflict in state 78 between rule 76 and token EQOP resolved as reduce.
Conflict in state 82 between rule 98 and token ',' resolved as shift.
Conflict in state 93 between rule 75 and token ADDOP resolved as reduce.
Conflict in state 93 between rule 75 and token ASSIGNOP resolved as reduce.
Conflict in state 93 between rule 75 and token POSTINC resolved as shift.
Conflict in state 93 between rule 75 and token POWOP resolved as shift.
Conflict in state 93 between rule 75 and token MATCHOP resolved as reduce.
Conflict in state 93 between rule 75 and token POSTDEC resolved as shift.
Conflict in state 93 between rule 75 and token DOTDOT resolved as reduce.
Conflict in state 93 between rule 75 and token MULOP resolved as reduce.
Conflict in state 93 between rule 75 and token ANDAND resolved as reduce.
Conflict in state 93 between rule 75 and token OROR resolved as reduce.
Conflict in state 93 between rule 75 and token RELOP resolved as reduce.
Conflict in state 93 between rule 75 and token EQOP resolved as reduce.
Conflict in state 114 between rule 102 and token ADDOP resolved as shift.
Conflict in state 114 between rule 102 and token ASSIGNOP resolved as reduce.
Conflict in state 114 between rule 102 and token POSTINC resolved as shift.
Conflict in state 114 between rule 102 and token POWOP resolved as shift.
Conflict in state 114 between rule 102 and token MATCHOP resolved as shift.
Conflict in state 114 between rule 102 and token POSTDEC resolved as shift.
Conflict in state 114 between rule 102 and token DOTDOT resolved as reduce.
Conflict in state 114 between rule 102 and token MULOP resolved as shift.
Conflict in state 114 between rule 102 and token ANDAND resolved as reduce.
Conflict in state 114 between rule 102 and token OROR resolved as reduce.
Conflict in state 114 between rule 102 and token RELOP resolved as reduce.
Conflict in state 114 between rule 102 and token EQOP resolved as reduce.
Conflict in state 118 between rule 101 and token ADDOP resolved as shift.
Conflict in state 118 between rule 101 and token ASSIGNOP resolved as reduce.
Conflict in state 118 between rule 101 and token POSTINC resolved as shift.
Conflict in state 118 between rule 101 and token POWOP resolved as shift.
Conflict in state 118 between rule 101 and token MATCHOP resolved as shift.
Conflict in state 118 between rule 101 and token POSTDEC resolved as shift.
Conflict in state 118 between rule 101 and token DOTDOT resolved as reduce.
Conflict in state 118 between rule 101 and token MULOP resolved as shift.
Conflict in state 118 between rule 101 and token ANDAND resolved as reduce.
Conflict in state 118 between rule 101 and token OROR resolved as reduce.
Conflict in state 118 between rule 101 and token RELOP resolved as reduce.
Conflict in state 118 between rule 101 and token EQOP resolved as reduce.
Conflict in state 130 between rule 59 and token ',' resolved as shift.
Conflict in state 149 between rule 64 and token ADDOP resolved as shift.
Conflict in state 149 between rule 64 and token ASSIGNOP resolved as shift.
Conflict in state 149 between rule 64 and token POSTINC resolved as shift.
Conflict in state 149 between rule 64 and token POWOP resolved as shift.
Conflict in state 149 between rule 64 and token MATCHOP resolved as shift.
Conflict in state 149 between rule 64 and token POSTDEC resolved as shift.
Conflict in state 149 between rule 64 and token DOTDOT resolved as shift.
Conflict in state 149 between rule 64 and token MULOP resolved as shift.
Conflict in state 149 between rule 64 and token ANDAND resolved as shift.
Conflict in state 149 between rule 64 and token OROR resolved as shift.
Conflict in state 149 between rule 64 and token RELOP resolved as shift.
Conflict in state 149 between rule 64 and token EQOP resolved as shift.
Conflict in state 150 between rule 65 and token ADDOP resolved as reduce.
Conflict in state 150 between rule 65 and token ASSIGNOP resolved as reduce.
Conflict in state 150 between rule 65 and token POSTINC resolved as shift.
Conflict in state 150 between rule 65 and token POWOP resolved as shift.
Conflict in state 150 between rule 65 and token MATCHOP resolved as reduce.
Conflict in state 150 between rule 65 and token POSTDEC resolved as shift.
Conflict in state 150 between rule 65 and token DOTDOT resolved as reduce.
Conflict in state 150 between rule 65 and token MULOP resolved as reduce.
Conflict in state 150 between rule 65 and token ANDAND resolved as reduce.
Conflict in state 150 between rule 65 and token OROR resolved as reduce.
Conflict in state 150 between rule 65 and token RELOP resolved as reduce.
Conflict in state 150 between rule 65 and token EQOP resolved as reduce.
Conflict in state 151 between rule 73 and token ADDOP resolved as reduce.
Conflict in state 151 between rule 73 and token ASSIGNOP resolved as reduce.
Conflict in state 151 between rule 73 and token POSTINC resolved as shift.
Conflict in state 151 between rule 73 and token POWOP resolved as shift.
Conflict in state 151 between rule 73 and token MATCHOP resolved as reduce.
Conflict in state 151 between rule 73 and token POSTDEC resolved as shift.
Conflict in state 151 between rule 73 and token DOTDOT resolved as reduce.
Conflict in state 151 between rule 73 and token MULOP resolved as reduce.
Conflict in state 151 between rule 73 and token ANDAND resolved as reduce.
Conflict in state 151 between rule 73 and token OROR resolved as reduce.
Conflict in state 151 between rule 73 and token RELOP resolved as reduce.
Conflict in state 151 between rule 73 and token EQOP resolved as reduce.
Conflict in state 152 between rule 71 and token ADDOP resolved as shift.
Conflict in state 152 between rule 71 and token ASSIGNOP resolved as reduce.
Conflict in state 152 between rule 71 and token POSTINC resolved as shift.
Conflict in state 152 between rule 71 and token POWOP resolved as shift.
Conflict in state 152 between rule 71 and token MATCHOP resolved as shift.
Conflict in state 152 between rule 71 and token POSTDEC resolved as shift.
Conflict in state 152 between rule 71 and token DOTDOT resolved as reduce.
Conflict in state 152 between rule 71 and token MULOP resolved as shift.
Conflict in state 152 between rule 71 and token ANDAND resolved as reduce.
Conflict in state 152 between rule 71 and token OROR resolved as reduce.
Conflict in state 152 between rule 71 and token RELOP resolved as shift.
Conflict in state 152 between rule 71 and token EQOP resolved as shift.
Conflict in state 153 between rule 69 and token ADDOP resolved as shift.
Conflict in state 153 between rule 69 and token ASSIGNOP resolved as reduce.
Conflict in state 153 between rule 69 and token POSTINC resolved as shift.
Conflict in state 153 between rule 69 and token POWOP resolved as shift.
Conflict in state 153 between rule 69 and token MATCHOP resolved as shift.
Conflict in state 153 between rule 69 and token POSTDEC resolved as shift.
Conflict in state 153 between rule 69 and token DOTDOT resolved as reduce.
Conflict in state 153 between rule 69 and token MULOP resolved as shift.
Conflict in state 153 between rule 69 and token ANDAND resolved as reduce.
Conflict in state 153 between rule 69 and token OROR resolved as reduce.
Conflict in state 153 between rule 69 and token RELOP resolved as shift.
Conflict in state 153 between rule 69 and token EQOP resolved as error.
Conflict in state 154 between rule 68 and token ADDOP resolved as shift.
Conflict in state 154 between rule 68 and token ASSIGNOP resolved as reduce.
Conflict in state 154 between rule 68 and token POSTINC resolved as shift.
Conflict in state 154 between rule 68 and token POWOP resolved as shift.
Conflict in state 154 between rule 68 and token MATCHOP resolved as shift.
Conflict in state 154 between rule 68 and token POSTDEC resolved as shift.
Conflict in state 154 between rule 68 and token DOTDOT resolved as reduce.
Conflict in state 154 between rule 68 and token MULOP resolved as shift.
Conflict in state 154 between rule 68 and token ANDAND resolved as reduce.
Conflict in state 154 between rule 68 and token OROR resolved as reduce.
Conflict in state 154 between rule 68 and token RELOP resolved as error.
Conflict in state 154 between rule 68 and token EQOP resolved as reduce.
Conflict in state 155 between rule 67 and token ADDOP resolved as reduce.
Conflict in state 155 between rule 67 and token ASSIGNOP resolved as reduce.
Conflict in state 155 between rule 67 and token POSTINC resolved as shift.
Conflict in state 155 between rule 67 and token POWOP resolved as shift.
Conflict in state 155 between rule 67 and token MATCHOP resolved as shift.
Conflict in state 155 between rule 67 and token POSTDEC resolved as shift.
Conflict in state 155 between rule 67 and token DOTDOT resolved as reduce.
Conflict in state 155 between rule 67 and token MULOP resolved as shift.
Conflict in state 155 between rule 67 and token ANDAND resolved as reduce.
Conflict in state 155 between rule 67 and token OROR resolved as reduce.
Conflict in state 155 between rule 67 and token RELOP resolved as reduce.
Conflict in state 155 between rule 67 and token EQOP resolved as reduce.
Conflict in state 156 between rule 70 and token ADDOP resolved as shift.
Conflict in state 156 between rule 70 and token ASSIGNOP resolved as reduce.
Conflict in state 156 between rule 70 and token POSTINC resolved as shift.
Conflict in state 156 between rule 70 and token POWOP resolved as shift.
Conflict in state 156 between rule 70 and token MATCHOP resolved as shift.
Conflict in state 156 between rule 70 and token POSTDEC resolved as shift.
Conflict in state 156 between rule 70 and token DOTDOT resolved as error.
Conflict in state 156 between rule 70 and token MULOP resolved as shift.
Conflict in state 156 between rule 70 and token ANDAND resolved as shift.
Conflict in state 156 between rule 70 and token OROR resolved as shift.
Conflict in state 156 between rule 70 and token RELOP resolved as shift.
Conflict in state 156 between rule 70 and token EQOP resolved as shift.
Conflict in state 157 between rule 66 and token ADDOP resolved as reduce.
Conflict in state 157 between rule 66 and token ASSIGNOP resolved as reduce.
Conflict in state 157 between rule 66 and token POSTINC resolved as shift.
Conflict in state 157 between rule 66 and token POWOP resolved as shift.
Conflict in state 157 between rule 66 and token MATCHOP resolved as shift.
Conflict in state 157 between rule 66 and token POSTDEC resolved as shift.
Conflict in state 157 between rule 66 and token DOTDOT resolved as reduce.
Conflict in state 157 between rule 66 and token MULOP resolved as reduce.
Conflict in state 157 between rule 66 and token ANDAND resolved as reduce.
Conflict in state 157 between rule 66 and token OROR resolved as reduce.
Conflict in state 157 between rule 66 and token RELOP resolved as reduce.
Conflict in state 157 between rule 66 and token EQOP resolved as reduce.
Conflict in state 158 between rule 72 and token ADDOP resolved as shift.
Conflict in state 158 between rule 72 and token ASSIGNOP resolved as reduce.
Conflict in state 158 between rule 72 and token POSTINC resolved as shift.
Conflict in state 158 between rule 72 and token POWOP resolved as shift.
Conflict in state 158 between rule 72 and token MATCHOP resolved as shift.
Conflict in state 158 between rule 72 and token POSTDEC resolved as shift.
Conflict in state 158 between rule 72 and token DOTDOT resolved as reduce.
Conflict in state 158 between rule 72 and token MULOP resolved as shift.
Conflict in state 158 between rule 72 and token ANDAND resolved as shift.
Conflict in state 158 between rule 72 and token OROR resolved as reduce.
Conflict in state 158 between rule 72 and token RELOP resolved as shift.
Conflict in state 158 between rule 72 and token EQOP resolved as shift.
Conflict in state 162 between rule 53 and token OROP resolved as reduce.
Conflict in state 162 between rule 53 and token ANDOP resolved as reduce.
Conflict in state 164 between rule 54 and token OROP resolved as reduce.
Conflict in state 164 between rule 54 and token ANDOP resolved as shift.
Conflict in state 172 between rule 57 and token ADDOP resolved as shift.
Conflict in state 172 between rule 57 and token ASSIGNOP resolved as shift.
Conflict in state 172 between rule 57 and token POSTINC resolved as shift.
Conflict in state 172 between rule 57 and token POWOP resolved as shift.
Conflict in state 172 between rule 57 and token MATCHOP resolved as shift.
Conflict in state 172 between rule 57 and token POSTDEC resolved as shift.
Conflict in state 172 between rule 57 and token DOTDOT resolved as shift.
Conflict in state 172 between rule 57 and token MULOP resolved as shift.
Conflict in state 172 between rule 57 and token ANDAND resolved as shift.
Conflict in state 172 between rule 57 and token OROR resolved as shift.
Conflict in state 172 between rule 57 and token RELOP resolved as shift.
Conflict in state 172 between rule 57 and token EQOP resolved as shift.

Rules:
------
0:	$start -> prog $end
1:	prog -> lineseq
2:	block -> '{' remember lineseq '}'
3:	remember -> /* empty */
4:	mblock -> '{' mremember lineseq '}'
5:	mremember -> /* empty */
6:	lineseq -> /* empty */
7:	lineseq -> lineseq decl
8:	lineseq -> lineseq line
9:	line -> cond
10:	line -> loop
11:	line -> sideff ';'
12:	sideff -> error
13:	sideff -> expr
14:	sideff -> expr IF expr
15:	sideff -> expr WHILE expr
16:	sideff -> expr FOR expr
17:	else -> /* empty */
18:	else -> ELSE mblock
19:	else -> ELSIF '(' mexpr ')' mblock else
20:	cond -> IF '(' remember mexpr ')' mblock else
21:	cont -> /* empty */
22:	cont -> CONTINUE block
23:	loop -> WHILE '(' remember mtexpr ')' mblock cont
24:	loop -> FOR MY remember my_scalar '(' mexpr ')' mblock cont
25:	loop -> FOR scalar '(' remember mexpr ')' mblock cont
26:	loop -> FOR '(' remember mexpr ')' mblock cont
27:	loop -> FOR '(' remember mnexpr ';' mtexpr ';' mnexpr ')' mblock
28:	loop -> block cont
29:	nexpr -> /* empty */
30:	nexpr -> sideff
31:	texpr -> /* empty */
32:	texpr -> expr
33:	mexpr -> expr
34:	mnexpr -> nexpr
35:	mtexpr -> texpr
36:	decl -> format
37:	decl -> subrout
38:	decl -> package
39:	decl -> use
40:	format -> FORMAT startformsub formname block
41:	formname -> WORD
42:	formname -> /* empty */
43:	subrout -> SUB startsub subname subbody
44:	startsub -> /* empty */
45:	startformsub -> /* empty */
46:	subname -> WORD
47:	subbody -> block
48:	subbody -> ';'
49:	package -> PACKAGE WORD ';'
50:	package -> PACKAGE ';'
51:	@1-2 -> /* empty */
52:	use -> USE startsub @1-2 WORD WORD listexpr ';'
53:	expr -> expr ANDOP expr
54:	expr -> expr OROP expr
55:	expr -> argexpr
56:	argexpr -> argexpr ','
57:	argexpr -> argexpr ',' term
58:	argexpr -> term
59:	listop -> LSTOP indirob argexpr
60:	listop -> FUNC '(' indirob expr ')'
61:	listop -> LSTOP listexpr
62:	listop -> FUNC '(' listexprcom ')'
63:	subscripted -> scalar '[' expr ']'
64:	termbinop -> term ASSIGNOP term
65:	termbinop -> term POWOP term
66:	termbinop -> term MULOP term
67:	termbinop -> term ADDOP term
68:	termbinop -> term RELOP term
69:	termbinop -> term EQOP term
70:	termbinop -> term DOTDOT term
71:	termbinop -> term ANDAND term
72:	termbinop -> term OROR term
73:	termbinop -> term MATCHOP term
74:	termunop -> '-' term
75:	termunop -> '+' term
76:	termunop -> '!' term
77:	termunop -> term POSTINC
78:	termunop -> term POSTDEC
79:	term -> termbinop
80:	term -> termunop
81:	term -> myattrterm
82:	term -> '(' expr ')'
83:	term -> '(' ')'
84:	term -> scalar
85:	term -> hsh
86:	term -> ary
87:	term -> arylen
88:	term -> subscripted
89:	term -> '(' expr ')' '[' expr ']'
90:	term -> '(' ')' '[' expr ']'
91:	term -> ary '[' expr ']'
92:	term -> ary '{' expr ';' '}'
93:	term -> amper
94:	term -> amper '(' ')'
95:	term -> amper '(' expr ')'
96:	term -> NOAMP WORD listexpr
97:	term -> LOOPEX
98:	term -> NOTOP argexpr
99:	term -> UNIOP
100:	term -> UNIOP block
101:	term -> UNIOP term
102:	term -> UNIOPSUB term
103:	term -> FUNC0
104:	term -> FUNC0 '(' ')'
105:	term -> FUNC1 '(' ')'
106:	term -> FUNC1 '(' expr ')'
107:	term -> PMFUNC '(' term ')'
108:	term -> PMFUNC '(' term ',' term ')'
109:	term -> WORD
110:	term -> listop
111:	myattrterm -> MY myterm myattrlist
112:	myattrterm -> MY myterm
113:	myterm -> '(' expr ')'
114:	myterm -> '(' ')'
115:	myterm -> scalar
116:	myterm -> hsh
117:	myterm -> ary
118:	listexpr -> /* empty */
119:	listexpr -> argexpr
120:	listexprcom -> /* empty */
121:	listexprcom -> expr
122:	listexprcom -> expr ','
123:	my_scalar -> scalar
124:	amper -> '&' indirob
125:	scalar -> '$' indirob
126:	ary -> '@' indirob
127:	hsh -> '%' indirob
128:	arylen -> DOLSHARP indirob
129:	indirob -> WORD
130:	indirob -> scalar
131:	indirob -> block

States:
-------
State 0:

	$start -> . prog $end	(Rule 0)

	$default	reduce using rule 6 (lineseq)

	prog	go to state 1
	lineseq	go to state 2

State 1:

	$start -> prog . $end	(Rule 0)

	$end	shift, and go to state 3

State 2:

	prog -> lineseq .	(Rule 1)
	lineseq -> lineseq . decl	(Rule 7)
	lineseq -> lineseq . line	(Rule 8)

	'!'	shift, and go to state 14
	'$'	shift, and go to state 16
	'%'	shift, and go to state 9
	'&'	shift, and go to state 49
	'('	shift, and go to state 30
	'+'	shift, and go to state 35
	'-'	shift, and go to state 5
	'@'	shift, and go to state 7
	'{'	shift, and go to state 51
	DOLSHARP	shift, and go to state 37
	FOR	shift, and go to state 34
	FORMAT	shift, and go to state 24
	FUNC	shift, and go to state 39
	FUNC0	shift, and go to state 47
	FUNC1	shift, and go to state 31
	IF	shift, and go to state 17
	LOOPEX	shift, and go to state 42
	LSTOP	shift, and go to state 11
	MY	shift, and go to state 10
	NOAMP	shift, and go to state 36
	NOTOP	shift, and go to state 23
	PACKAGE	shift, and go to state 8
	PMFUNC	shift, and go to state 22
	SUB	shift, and go to state 26
	UNIOP	shift, and go to state 50
	UNIOPSUB	shift, and go to state 45
	USE	shift, and go to state 53
	WHILE	shift, and go to state 46
	WORD	shift, and go to state 4
	error	shift, and go to state 43

	$end	reduce using rule 1 (prog)

	scalar	go to state 6
	subrout	go to state 32
	sideff	go to state 33
	term	go to state 38
	loop	go to state 13
	ary	go to state 12
	use	go to state 41
	expr	go to state 40
	decl	go to state 15
	termbinop	go to state 18
	listop	go to state 44
	hsh	go to state 19
	termunop	go to state 20
	line	go to state 21
	cond	go to state 25
	arylen	go to state 48
	amper	go to state 27
	myattrterm	go to state 28
	subscripted	go to state 29
	package	go to state 52
	format	go to state 54
	block	go to state 55
	argexpr	go to state 56

State 3:

	$start -> prog $end .	(Rule 0)

	$default	accept

State 4:

	term -> WORD .	(Rule 109)

	$default	reduce using rule 109 (term)

State 5:

	termunop -> '-' . term	(Rule 74)

	'!'	shift, and go to state 14
	'$'	shift, and go to state 16
	'%'	shift, and go to state 9
	'&'	shift, and go to state 49
	'('	shift, and go to state 30
	'+'	shift, and go to state 35
	'-'	shift, and go to state 5
	'@'	shift, and go to state 7
	DOLSHARP	shift, and go to state 37
	FUNC	shift, and go to state 39
	FUNC0	shift, and go to state 47
	FUNC1	shift, and go to state 31
	LOOPEX	shift, and go to state 42
	LSTOP	shift, and go to state 11
	MY	shift, and go to state 10
	NOAMP	shift, and go to state 36
	NOTOP	shift, and go to state 23
	PMFUNC	shift, and go to state 22
	UNIOP	shift, and go to state 50
	UNIOPSUB	shift, and go to state 45
	WORD	shift, and go to state 4

	scalar	go to state 6
	arylen	go to state 48
	myattrterm	go to state 28
	amper	go to state 27
	subscripted	go to state 29
	term	go to state 57
	ary	go to state 12
	termbinop	go to state 18
	listop	go to state 44
	hsh	go to state 19
	termunop	go to state 20

State 6:

	subscripted -> scalar . '[' expr ']'	(Rule 63)
	term -> scalar .	(Rule 84)

	'['	shift, and go to state 58

	$default	reduce using rule 84 (term)

State 7:

	ary -> '@' . indirob	(Rule 126)

	'$'	shift, and go to state 16
	'{'	shift, and go to state 51
	WORD	shift, and go to state 60

	scalar	go to state 59
	indirob	go to state 61
	block	go to state 62

State 8:

	package -> PACKAGE . WORD ';'	(Rule 49)
	package -> PACKAGE . ';'	(Rule 50)

	';'	shift, and go to state 64
	WORD	shift, and go to state 63

State 9:

	hsh -> '%' . indirob	(Rule 127)

	'$'	shift, and go to state 16
	'{'	shift, and go to state 51
	WORD	shift, and go to state 60

	scalar	go to state 59
	indirob	go to state 65
	block	go to state 62

State 10:

	myattrterm -> MY . myterm myattrlist	(Rule 111)
	myattrterm -> MY . myterm	(Rule 112)

	'$'	shift, and go to state 16
	'%'	shift, and go to state 9
	'('	shift, and go to state 69
	'@'	shift, and go to state 7

	scalar	go to state 66
	myterm	go to state 70
	hsh	go to state 68
	ary	go to state 67

State 11:

	listop -> LSTOP . indirob argexpr	(Rule 59)
	listop -> LSTOP . listexpr	(Rule 61)

	'!'	shift, and go to state 14
	'$'	shift, and go to state 16
	'%'	shift, and go to state 9
	'&'	shift, and go to state 49
	'('	shift, and go to state 30
	'+'	shift, and go to state 35
	'-'	shift, and go to state 5
	'@'	shift, and go to state 7
	'{'	shift, and go to state 51
	DOLSHARP	shift, and go to state 37
	FUNC	shift, and go to state 39
	FUNC0	shift, and go to state 47
	FUNC1	shift, and go to state 31
	LOOPEX	shift, and go to state 42
	LSTOP	shift, and go to state 11
	MY	shift, and go to state 10
	NOAMP	shift, and go to state 36
	NOTOP	shift, and go to state 23
	PMFUNC	shift, and go to state 22
	UNIOP	shift, and go to state 50
	UNIOPSUB	shift, and go to state 45
	WORD	shift, and go to state 71

	$default	reduce using rule 118 (listexpr)

	scalar	go to state 72
	arylen	go to state 48
	indirob	go to state 73
	myattrterm	go to state 28
	amper	go to state 27
	subscripted	go to state 29
	term	go to state 38
	ary	go to state 12
	termbinop	go to state 18
	block	go to state 62
	argexpr	go to state 75
	listop	go to state 44
	listexpr	go to state 74
	hsh	go to state 19
	termunop	go to state 20

State 12:

	term -> ary .	(Rule 86)
	term -> ary . '[' expr ']'	(Rule 91)
	term -> ary . '{' expr ';' '}'	(Rule 92)

	'['	shift, and go to state 76
	'{'	shift, and go to state 77

	$default	reduce using rule 86 (term)

State 13:

	line -> loop .	(Rule 10)

	$default	reduce using rule 10 (line)

State 14:

	termunop -> '!' . term	(Rule 76)

	'!'	shift, and go to state 14
	'$'	shift, and go to state 16
	'%'	shift, and go to state 9
	'&'	shift, and go to state 49
	'('	shift, and go to state 30
	'+'	shift, and go to state 35
	'-'	shift, and go to state 5
	'@'	shift, and go to state 7
	DOLSHARP	shift, and go to state 37
	FUNC	shift, and go to state 39
	FUNC0	shift, and go to state 47
	FUNC1	shift, and go to state 31
	LOOPEX	shift, and go to state 42
	LSTOP	shift, and go to state 11
	MY	shift, and go to state 10
	NOAMP	shift, and go to state 36
	NOTOP	shift, and go to state 23
	PMFUNC	shift, and go to state 22
	UNIOP	shift, and go to state 50
	UNIOPSUB	shift, and go to state 45
	WORD	shift, and go to state 4

	scalar	go to state 6
	arylen	go to state 48
	myattrterm	go to state 28
	amper	go to state 27
	subscripted	go to state 29
	term	go to state 78
	ary	go to state 12
	termbinop	go to state 18
	listop	go to state 44
	hsh	go to state 19
	termunop	go to state 20

State 15:

	lineseq -> lineseq decl .	(Rule 7)

	$default	reduce using rule 7 (lineseq)

State 16:

	scalar -> '$' . indirob	(Rule 125)

	'$'	shift, and go to state 16
	'{'	shift, and go to state 51
	WORD	shift, and go to state 60

	scalar	go to state 59
	indirob	go to state 79
	block	go to state 62

State 17:

	cond -> IF . '(' remember mexpr ')' mblock else	(Rule 20)

	'('	shift, and go to state 80

State 18:

	term -> termbinop .	(Rule 79)

	$default	reduce using rule 79 (term)

State 19:

	term -> hsh .	(Rule 85)

	$default	reduce using rule 85 (term)

State 20:

	term -> termunop .	(Rule 80)

	$default	reduce using rule 80 (term)

State 21:

	lineseq -> lineseq line .	(Rule 8)

	$default	reduce using rule 8 (lineseq)

State 22:

	term -> PMFUNC . '(' term ')'	(Rule 107)
	term -> PMFUNC . '(' term ',' term ')'	(Rule 108)

	'('	shift, and go to state 81

State 23:

	term -> NOTOP . argexpr	(Rule 98)

	'!'	shift, and go to state 14
	'$'	shift, and go to state 16
	'%'	shift, and go to state 9
	'&'	shift, and go to state 49
	'('	shift, and go to state 30
	'+'	shift, and go to state 35
	'-'	shift, and go to state 5
	'@'	shift, and go to state 7
	DOLSHARP	shift, and go to state 37
	FUNC	shift, and go to state 39
	FUNC0	shift, and go to state 47
	FUNC1	shift, and go to state 31
	LOOPEX	shift, and go to state 42
	LSTOP	shift, and go to state 11
	MY	shift, and go to state 10
	NOAMP	shift, and go to state 36
	NOTOP	shift, and go to state 23
	PMFUNC	shift, and go to state 22
	UNIOP	shift, and go to state 50
	UNIOPSUB	shift, and go to state 45
	WORD	shift, and go to state 4

	scalar	go to state 6
	arylen	go to state 48
	myattrterm	go to state 28
	amper	go to state 27
	subscripted	go to state 29
	term	go to state 38
	ary	go to state 12
	termbinop	go to state 18
	argexpr	go to state 82
	listop	go to state 44
	hsh	go to state 19
	termunop	go to state 20

State 24:

	format -> FORMAT . startformsub formname block	(Rule 40)

	$default	reduce using rule 45 (startformsub)

	startformsub	go to state 83

State 25:

	line -> cond .	(Rule 9)

	$default	reduce using rule 9 (line)

State 26:

	subrout -> SUB . startsub subname subbody	(Rule 43)

	$default	reduce using rule 44 (startsub)

	startsub	go to state 84

State 27:

	term -> amper .	(Rule 93)
	term -> amper . '(' ')'	(Rule 94)
	term -> amper . '(' expr ')'	(Rule 95)

	'('	shift, and go to state 85

	$default	reduce using rule 93 (term)

State 28:

	term -> myattrterm .	(Rule 81)

	$default	reduce using rule 81 (term)

State 29:

	term -> subscripted .	(Rule 88)

	$default	reduce using rule 88 (term)

State 30:

	term -> '(' . expr ')'	(Rule 82)
	term -> '(' . ')'	(Rule 83)
	term -> '(' . expr ')' '[' expr ']'	(Rule 89)
	term -> '(' . ')' '[' expr ']'	(Rule 90)

	'!'	shift, and go to state 14
	'$'	shift, and go to state 16
	'%'	shift, and go to state 9
	'&'	shift, and go to state 49
	'('	shift, and go to state 30
	')'	shift, and go to state 87
	'+'	shift, and go to state 35
	'-'	shift, and go to state 5
	'@'	shift, and go to state 7
	DOLSHARP	shift, and go to state 37
	FUNC	shift, and go to state 39
	FUNC0	shift, and go to state 47
	FUNC1	shift, and go to state 31
	LOOPEX	shift, and go to state 42
	LSTOP	shift, and go to state 11
	MY	shift, and go to state 10
	NOAMP	shift, and go to state 36
	NOTOP	shift, and go to state 23
	PMFUNC	shift, and go to state 22
	UNIOP	shift, and go to state 50
	UNIOPSUB	shift, and go to state 45
	WORD	shift, and go to state 4

	scalar	go to state 6
	arylen	go to state 48
	myattrterm	go to state 28
	amper	go to state 27
	subscripted	go to state 29
	term	go to state 38
	ary	go to state 12
	expr	go to state 86
	termbinop	go to state 18
	argexpr	go to state 56
	listop	go to state 44
	hsh	go to state 19
	termunop	go to state 20

State 31:

	term -> FUNC1 . '(' ')'	(Rule 105)
	term -> FUNC1 . '(' expr ')'	(Rule 106)

	'('	shift, and go to state 88

State 32:

	decl -> subrout .	(Rule 37)

	$default	reduce using rule 37 (decl)

State 33:

	line -> sideff . ';'	(Rule 11)

	';'	shift, and go to state 89

State 34:

	loop -> FOR . MY remember my_scalar '(' mexpr ')' mblock cont	(Rule 24)
	loop -> FOR . scalar '(' remember mexpr ')' mblock cont	(Rule 25)
	loop -> FOR . '(' remember mexpr ')' mblock cont	(Rule 26)
	loop -> FOR . '(' remember mnexpr ';' mtexpr ';' mnexpr ')' mblock	(Rule 27)

	'$'	shift, and go to state 16
	'('	shift, and go to state 92
	MY	shift, and go to state 91

	scalar	go to state 90

State 35:

	termunop -> '+' . term	(Rule 75)
